@@ -381,7 +381,7 @@ CREATE TABLE items (
 -- Table structure for table 'media'
 --
 
-CREATE TABLE media (
+CREATE TABLE media 
 	mediaid		int(4) NOT NULL auto_increment,
 	userid		int(4) DEFAULT '0' NOT NULL,
 --	type		varchar(10) DEFAULT '' NOT NULL,
@@ -801,7 +801,6 @@ CREATE TABLE applications (
 	name                    varchar(255)    DEFAULT '' NOT NULL,
 	templateid		int(4)		DEFAULT '0' NOT NULL,
 	PRIMARY KEY 	(applicationid),
-	KEY 		hostid (hostid),
 	KEY 		templateid (templateid),
 	UNIQUE          appname (hostid,name)
 ) type=InnoDB;
